@@ -321,9 +321,18 @@ Up to 2009-01-02 (since 1.7.5 release) Denton Woods <doomwiz@users.sf.net>
 	* ilut_states.c (ilutSetInteger): Fixed ILUT_MAXTEX_DEPTH call and added checks around first
 	  three calls for Param >= 1.
 	
-2009-01-20 Matěj Týč <bubla@sf.net>
+2009-02-01 Matěj Týč <bubla@sf.net>
 	* test/format_test: Tweaked the script to use wine if cross-compiling
 	to run the tests, extended testil capabilities
 	* m4/devil-definitions.m4: Fixed bugs that caused that you couldn't
 	disable support for some formats no matter what :-)
 	* m4/devil-api-checks.m4: Added Xrender build support (by Jesse Maurais)
+
+2009-02-02 Denton Woods <doomwiz@users.sf.net>
+	* il_manip.c (ilCopyPixels):311: Added check for destination format of color index.
+	* il_convbuff.c (ilConvertBuffer): Changed to accept the source image palette.  Added code to
+	  convert from buffers that are related to a palette before the large switch.
+	* il_alloc.c (ifree): Changed so that if Ptr == NULL, it does not try to free the pointer.
+	* il_nvidia.cpp/il_squish.cpp: Added empty functions if nVidia or libsquish support is not
+	  compiled in.
+	
